fixing overflow on iphone safari

--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,8 @@
     padding: 0;
     overflow: hidden;
 }
+
+body {
+    width: 100%;
+    height: 100%;
+}
